@@ -1,5 +1,6 @@
 2/7/12
   Just map the desktop switcher and bar windows
+  Click on the bar to change to previous desktop
 
 28/6/12
   Changed the desktop switcher to have buttons the width of the
